Added edit rendering and line infrastructure. Need to add different modes for editing besides add line.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,7 @@
         <item
             android:id="@+id/nav_choose_pictures"
             android:icon="@drawable/ic_menu_camera"
+            android:checked="true"
             android:title="Choose Pictures" />
         <item
             android:id="@+id/nav_edit_lines"
